fix p spacing

--- a/css/index.css
+++ b/css/index.css
@@ -25,8 +25,6 @@ body {
 p:last-child {
   margin-bottom: 0;
 }
-p,
-.tmpl-post li,
 img {
   max-width: 37.5em; /* 600px /16 */
 }
